# racs2_bridge

./: README.md
Document/: HowToExchangeMessages.md
Example/: README.md
Example/Case.1/: README.md
Example/Case.1/ROS2/racs2_msg/msg/: RACS2UserMsg.msg
Example/Case.1/ROS2/subscriber_c2s/: package.xml  setup.cfg  setup.py
Example/Case.1/ROS2/subscriber_c2s/subscriber_c2s/: subscriber_c2s_node.py
Example/Case.1/cFS/sample_defs/: cpu1_cfe_es_startup.scr  targets.cmake
Example/Case.2/: README.md
Example/Case.2/ROS2/publisher_s2c/: package.xml  setup.cfg  setup.py
Example/Case.2/ROS2/publisher_s2c/publisher_s2c/: publisher_s2c_node.py
Example/Case.2/cFS/sample_defs/: cpu1_cfe_es_startup.scr  targets.cmake
Misc/ProtoBuffers/: RACS2Bridge_std_msgs.pb-c.c  RACS2Bridge_std_msgs.pb-c.h  RACS2Bridge_std_msgs.proto
ROS2/Bridge/Client_Python/bridge_py_c/: package.xml  setup.cfg  setup.py
ROS2/Bridge/Server_Python/bridge_py_s/: package.xml  setup.cfg  setup.py
cFS/Bridge/Client_C/apps/racs2_bridge_client/: CMakeLists.txt
cFS/Bridge/Client_C/apps/racs2_bridge_client/fsw/mission_inc/: racs2_bridge_client_perfids.h
cFS/Bridge/Client_C/apps/racs2_bridge_client/fsw/platform_inc/: racs2_bridge_client_msgids.h
cFS/Bridge/Client_C/apps/racs2_bridge_client/fsw/src/: racs2_bridge_client.c  racs2_bridge_client.h  racs2_bridge_client_events.h  racs2_bridge_client_msg.h  racs2_bridge_client_version.h  racs2_bridge_msg.h  racs2_user_msg.h
cFS/Bridge/Client_C/sample_defs/: cpu1_cfe_es_startup.scr  targets.cmake
(+18 files in other folders)
